Error fixed, effect of navbar visible.

--- a/Proyecto6SitioMusica/src/scss/layout/_video.scss
+++ b/Proyecto6SitioMusica/src/scss/layout/_video.scss
@@ -1,6 +1,6 @@
 .video {
   position: relative;
-  max-height: 65rem;
+  max-height: 60rem;
   overflow: hidden;
 
   .overlay {
